# polpack

./: README.md  doc.txt  main.py  meson.build  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  code_style.yml  codeql.yml  test.yml
docs/: api.md  index.md  installation.md  quickstart.md  references.md  theory.md
src/: agm_values.f  agud.f  align_enum.f  bell.f  bell_values.f  benford.f  bernoulli_number.f  bernoulli_number2.f  bernoulli_number3.f  bernoulli_number_values.f  bernoulli_poly.f  bernoulli_poly2.f  bernstein_poly.f  bernstein_poly_values.f  beta_values.f  bpab.f  cardan_poly.f  cardan_poly_coef.f  cardinal_cos.f  cardinal_sin.f  catalan.f  catalan_constant.f  catalan_row_next.f  catalan_values.f  charlier.f  cheby_t_poly.f  cheby_t_poly_coef.f  cheby_t_poly_values.f  cheby_t_poly_zero.f  cheby_u_poly.f  cheby_u_poly_coef.f  cheby_u_poly_values.f  cheby_u_poly_zero.f  chebyshev_discrete.f  collatz_count.f  collatz_count_max.f  collatz_count_values.f  comb_row_next.f  commul.f  complete_symmetric_poly.f  (+140 more)
src/polpack/: __init__.py
tests/: conftest.py  test_bernoulli_euler.py  test_chebyshev.py  test_combinatorial_sequences.py  test_combinatorics.py  test_legendre.py  test_number_theory.py  test_orthogonal_polys.py  test_special_functions.py
