[project]
name = "polpack"
dynamic = ["version"]
description = "Special Functions and Recursively-Defined Polynomial Families for Python"
authors = [
    { name = "John Burkardt", email = "jvb25@pitt.edu" },
]
maintainers = [
    { name = "Saud Zahir", email = "m.saud.zahir@gmail.com" },
    { name = "M Laraib Ali", email = "laraibg786@outlook.com" }
]
readme = "README.md"
license = "LGPL-2.1"
keywords = [
    "special functions",
    "polynomials",
    "combinatorics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Fortran",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.urls]
homepage = "https://eggzec.github.io/polpack"
documentation = "https://eggzec.github.io/polpack/api/"
source = "https://github.com/eggzec/polpack"
releasenotes = "https://github.com/eggzec/polpack/releases/latest"
issues = "https://github.com/eggzec/polpack/issues"

[dependency-groups]
dev = [
  {include-group = "build"},
  {include-group = "docs"},
  {include-group = "lint"},
  {include-group = "test"}
]
build = [
    "meson-python",
    "ninja",
    "setuptools_scm>=8",
]
docs = [
    "zensical>=0.0.23"
]
lint = [
    "ruff==0.15.*",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6.1",
]

[build-system]
requires = [
    "meson-python",
    "numpy",
    "packaging",
    "setuptools_scm>=8"
]
build-backend = "mesonpy"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.cibuildwheel]
enable = ["cpython-prerelease"]

[tool.ruff]
line-length = 80
indent-width = 4
preview = true

# Output serialization format for violations. The default serialization
# format is "full" [env: RUFF_OUTPUT_FORMAT=] [possible values:
# concise, full, json, json-lines, junit, grouped, github, gitlab,
# pylint, rdjson, azure, sarif]
output-format = "grouped"

[tool.ruff.lint]
isort.lines-after-imports = 2
isort.split-on-trailing-comma = false

select = [
    "ANN", # flake8-annotations (required strict type annotations for public functions)
    "S",   # flake8-bandit (checks basic security issues in code)
    "BLE", # flake8-blind-except (checks the except blocks that do not specify exception)
    "FBT", # flake8-boolean-trap (ensure that boolean args can be used with kw only)
    "E",   # pycodestyle errors (PEP 8 style guide violations)
    "W",   # pycodestyle warnings (e.g., extra spaces, indentation issues)
    "DOC", # pydoclint issues (e.g., extra or missing return, yield, warnings)
    "A",   # flake8-buitins (check variable and function names to not shadow builtins)
    "N",   # Naming convention checks (e.g., PEP 8 variable and function names)
    "F",   # Pyflakes errors (e.g., unused imports, undefined variables)
    "I",   # isort (Ensures imports are sorted properly)
    "B",   # flake8-bugbear (Detects likely bugs and bad practices)
    "TID", # flake8-tidy-imports (Checks for banned or misplaced imports)
    "UP",  # pyupgrade (Automatically updates old Python syntax)
    "YTT", # flake8-2020 (Detects outdated Python 2/3 compatibility issues)
    "FLY", # flynt (Converts old-style string formatting to f-strings)
    "PIE", # flake8-pie
    "PL",  # pylint
    "RUF", # Ruff-specific rules (Additional optimizations and best practices)
]

ignore = []

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["RUF067"]
"**/tests/*.py" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN202",  # Missing return type annotation for private function
    "DOC201",  # `return` is not documented in docstring
    "PLR6301", # Method could be a function, class method, or static method
    "S101",    # Use of `assert` detected
]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true
